<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory app:title="@string/general_settings_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="feature_status"
            app:title="@string/feature_status_title"
            app:iconSpaceReserved="false"/>

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:dependency="feature_status"
            app:key="shuffle"
            app:summaryOff="@string/shuffle_summary_off"
            app:summaryOn="@string/shuffle_summary_on"
            app:title="@string/shuffle_title" />

        <ListPreference
            app:title="@string/time_interval_title"
            app:dependency="feature_status"
            app:defaultValue="1000*60*30"
            app:entries="@array/time_interval_entries"
            app:entryValues="@array/time_interval_values"
            app:key="time_interval"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_us_header"
        app:iconSpaceReserved="false">

        <Preference
            app:iconSpaceReserved="false"
            app:key="about"
            app:summary="@string/about_us_summary"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>